Complete demo for google oauth

--- a/projects/web/src/app/features/authentication/login/login.component.html
+++ b/projects/web/src/app/features/authentication/login/login.component.html
@@ -1,10 +1,4 @@
 <div>
-  asdsada
-  a
-  sd
-  asd
-  asdasdasd
-  asdasdasdasd
-  asdasd
-  <input>
+  <!-- We cannot custom the UI of google login button. Ref: https://github.com/abacritt/angularx-social-login/issues/744#issuecomment-1873387930 -->
+  <asl-google-signin-button shape="circle" type='standard' size='large' text="signin_with"/>
 </div>
