--- a/projects/common/src/lib/shared/theme/custom-components/input.css
+++ b/projects/common/src/lib/shared/theme/custom-components/input.css
@@ -1,33 +1,45 @@
+input.primary-blue {
+  --input-border-focus-color: var(--primary-color-blue)
+}
+input.primary-purple {
+  --input-border-focus-color: var(--primary-color-purple)
+}
+input.primary-green {
+  --input-border-focus-color: var(--primary-color-green)
+}
+input.primary-orange {
+  --input-border-focus-color: var(--primary-color-orange)
+}
+
 input[type="text"],
 input[type="email"],
 input[type="password"],
 input[type="search"],
 input:not([type]),
 textarea,
-.sa-input {
+.kn-input {
   --input-sides-padding: 10px;
   --input-prefix-suffix-padding: calc(var(--input-sides-padding) + 35px);
+  --input-border-color: var(--gray-color-300);
 
   width: 100%;
   padding: var(--input-sides-padding) 15px;
-  font-size: var(--font-size-400);
+  font-size: 400;
   line-height: inherit;
   color: inherit;
+  transition: 0.2s ease;
   border: 1px solid var(--input-border-color);
   border-radius: var(--border-radius);
-  background-color: var(--ink-primary-contrast-color);
 }
 
 input:focus,
-textarea:focus,
-select:focus {
+textarea:focus {
   outline: none;
-  border: 1px solid var(--brand-primary-color-500);
+  border: 1px solid var(--input-border-focus-color, var(--primary-color-blue));
 }
 
 input:disabled,
-textarea:disabled,
-select:disabled {
+textarea:disabled {
   border: 1px solid var(--input-disabled-border-color);
   background-color: var(--input-disabled-background-color);
 }
@@ -42,17 +54,10 @@ input.has-suffix {
 
 input[type="search"] {
   padding: 10px;
-  background-image: url(/assets/icons/search-icon.svg);
-  background-size: 1.3rem;
-  background-position: 10px center;
-  background-repeat: no-repeat;
   padding-left: calc(20px + 1rem);
-  border-color: var(--ink-secondary-light-color);
-  font-size: var(--font-size-400);
   min-width: 250px;
 }
 
 textarea {
-  resize: none;
   min-height: 150px;
 }
