--- a/projects/common/src/lib/shared/theme/custom-theme.scss
+++ b/projects/common/src/lib/shared/theme/custom-theme.scss
@@ -9,110 +9,6 @@
 // Be sure that you only ever include this mixin once!
 @include mat.core();
 
-/* Blue Palette */
-$blue-palette: (
-  50: var(--primary-color-blue-50),
-  100: var(--primary-color-blue-100),
-  200: var(--primary-color-blue-200),
-  300: var(--primary-color-blue-300),
-  400: var(--primary-color-blue-400),
-  500: var(--primary-color-blue-500),
-  600: var(--primary-color-blue-600),
-  700: var(--primary-color-blue-700),
-  800: var(--primary-color-blue-800),
-  900: var(--primary-color-blue-900),
-  contrast: (
-    50: rgba(black, 0.87),
-    100: rgba(black, 0.87),
-    200: rgba(black, 0.87),
-    300: white,
-    400: white,
-    500: white,
-    600: white,
-    700: white,
-    800: white,
-    900: white,
-  )
-);
-
-/* Purple Palette */
-$purple-palette: (
-  50: var(--primary-color-purple-50),
-  100: var(--primary-color-purple-100),
-  200: var(--primary-color-purple-200),
-  300: var(--primary-color-purple-300),
-  400: var(--primary-color-purple-400),
-  500: var(--primary-color-purple-500),
-  600: var(--primary-color-purple-600),
-  700: var(--primary-color-purple-700),
-  800: var(--primary-color-purple-800),
-  900: var(--primary-color-purple-900),
-  contrast: (
-    50: rgba(black, 0.87),
-    100: rgba(black, 0.87),
-    200: rgba(black, 0.87),
-    300: white,
-    400: white,
-    500: white,
-    600: white,
-    700: white,
-    800: white,
-    900: white,
-  )
-);
-
-/* Green Palette */
-$green-palette: (
-  50: var(--primary-color-green-50),
-  100: var(--primary-color-green-100),
-  200: var(--primary-color-green-200),
-  300: var(--primary-color-green-300),
-  400: var(--primary-color-green-400),
-  500: var(--primary-color-green-500),
-  600: var(--primary-color-green-600),
-  700: var(--primary-color-green-700),
-  800: var(--primary-color-green-800),
-  900: var(--primary-color-green-900),
-  contrast: (
-    50: rgba(black, 0.87),
-    100: rgba(black, 0.87),
-    200: rgba(black, 0.87),
-    300: black,
-    400: white,
-    500: white,
-    600: white,
-    700: white,
-    800: white,
-    900: white,
-  )
-);
-
-/* Orange Palette */
-$orange-palette: (
-  50: var(--primary-color-orange-50),
-  100: var(--primary-color-orange-100),
-  200: var(--primary-color-orange-200),
-  300: var(--primary-color-orange-300),
-  400: var(--primary-color-orange-400),
-  500: var(--primary-color-orange-500),
-  600: var(--primary-color-orange-600),
-  700: var(--primary-color-orange-700),
-  800: var(--primary-color-orange-800),
-  900: var(--primary-color-orange-900),
-  contrast: (
-    50: rgba(black, 0.87),
-    100: rgba(black, 0.87),
-    200: rgba(black, 0.87),
-    300: white,
-    400: white,
-    500: white,
-    600: white,
-    700: white,
-    800: white,
-    900: white,
-  )
-);
-
 $white-palette: (
   50: white,
   100: white,
@@ -124,6 +20,10 @@ $white-palette: (
   700: white,
   800: white,
   900: white,
+  A100: white,
+  A200: white,
+  A400: white,
+  A700: white,
   contrast: (
     50: rgba(black, 0.87),
     100: rgba(black, 0.87),
@@ -135,6 +35,10 @@ $white-palette: (
     700: rgba(black, 0.87),
     800: rgba(black, 0.87),
     900: rgba(black, 0.87),
+    A100: rgba(black, 0.87),
+    A200: rgba(black, 0.87),
+    A400: rgba(black, 0.87),
+    A700: rgba(black, 0.87),
   )
 );
 
@@ -142,10 +46,10 @@ $white-palette: (
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$app-primary-blue: mat.define-palette($blue-palette);
-$app-primary-purple: mat.define-palette($purple-palette);
-$app-primary-green: mat.define-palette($green-palette);
-$app-primary-orange: mat.define-palette($orange-palette);
+$app-primary-blue: mat.define-palette(mat.$blue-palette);
+$app-primary-purple: mat.define-palette(mat.$purple-palette);
+$app-primary-green: mat.define-palette(mat.$green-palette);
+$app-primary-orange: mat.define-palette(mat.$orange-palette);
 $app-accent: mat.define-palette($white-palette);
 
 $app-theme-blue: mat.define-light-theme((
