--- a/projects/web/src/app/app.component.html
+++ b/projects/web/src/app/app.component.html
@@ -1,3 +1,6 @@
 <knc-layout>
-  <router-outlet></router-outlet>
+  <mat-form-field>
+    <mat-label>Clearable input</mat-label>
+    <input matInput type="text" />
+  </mat-form-field>
 </knc-layout>
