--- a/projects/web/src/app/app.component.html
+++ b/projects/web/src/app/app.component.html
@@ -1,5 +1,3 @@
 <knc-layout>
-  <mat-form-field>
-    <input matInput type="text" />
-  </mat-form-field>
+  <knc-input label="Test Input" [formControl]="formControl"></knc-input>
 </knc-layout>
