Add theme provider and config local storage to work with SSR

--- a/projects/web/src/app/app.component.html
+++ b/projects/web/src/app/app.component.html
@@ -1,3 +1,5 @@
 <knc-layout>
-  <knc-input label="Test Input" [formControl]="formControl"></knc-input>
+  <knc-theme-provider>
+    <router-outlet></router-outlet>
+  </knc-theme-provider>
 </knc-layout>
