--- a/projects/common/src/lib/shared/layout/header/header.component.css
+++ b/projects/common/src/lib/shared/layout/header/header.component.css
@@ -3,6 +3,7 @@
   flex-direction: row;
   justify-content: space-between;
   gap: 8px;
+  background-color: var(--primary-color-50);
   align-items: center;
 }
 
