--- a/projects/common/src/lib/shared/theme/custom-theme.scss
+++ b/projects/common/src/lib/shared/theme/custom-theme.scss
@@ -86,23 +86,129 @@ $app-theme-orange: mat.define-light-theme((
 
 @include mat.all-component-themes($app-theme-blue);
 
+:root {
+  --color-blue-50: #{map-get(mat.$blue-palette, 50)};
+  --color-blue-100: #{map-get(mat.$blue-palette, 100)};
+  --color-blue-200: #{map-get(mat.$blue-palette, 200)};
+  --color-blue-300: #{map-get(mat.$blue-palette, 300)};
+  --color-blue-400: #{map-get(mat.$blue-palette, 400)};
+  --color-blue-500: #{map-get(mat.$blue-palette, 500)};
+  --color-blue-600: #{map-get(mat.$blue-palette, 600)};
+  --color-blue-700: #{map-get(mat.$blue-palette, 700)};
+  --color-blue-800: #{map-get(mat.$blue-palette, 800)};
+  --color-blue-900: #{map-get(mat.$blue-palette, 900)};
+
+  --color-purple-50: #{map-get(mat.$purple-palette, 50)};
+  --color-purple-100: #{map-get(mat.$purple-palette, 100)};
+  --color-purple-200: #{map-get(mat.$purple-palette, 200)};
+  --color-purple-300: #{map-get(mat.$purple-palette, 300)};
+  --color-purple-400: #{map-get(mat.$purple-palette, 400)};
+  --color-purple-500: #{map-get(mat.$purple-palette, 500)};
+  --color-purple-600: #{map-get(mat.$purple-palette, 600)};
+  --color-purple-700: #{map-get(mat.$purple-palette, 700)};
+  --color-purple-800: #{map-get(mat.$purple-palette, 800)};
+  --color-purple-900: #{map-get(mat.$purple-palette, 900)};
+
+  --color-green-50: #{map-get(mat.$green-palette, 50)};
+  --color-green-100: #{map-get(mat.$green-palette, 100)};
+  --color-green-200: #{map-get(mat.$green-palette, 200)};
+  --color-green-300: #{map-get(mat.$green-palette, 300)};
+  --color-green-400: #{map-get(mat.$green-palette, 400)};
+  --color-green-500: #{map-get(mat.$green-palette, 500)};
+  --color-green-600: #{map-get(mat.$green-palette, 600)};
+  --color-green-700: #{map-get(mat.$green-palette, 700)};
+  --color-green-800: #{map-get(mat.$green-palette, 800)};
+  --color-green-900: #{map-get(mat.$green-palette, 900)};
+
+  --color-orange-50: #{map-get(mat.$orange-palette, 50)};
+  --color-orange-100: #{map-get(mat.$orange-palette, 100)};
+  --color-orange-200: #{map-get(mat.$orange-palette, 200)};
+  --color-orange-300: #{map-get(mat.$orange-palette, 300)};
+  --color-orange-400: #{map-get(mat.$orange-palette, 400)};
+  --color-orange-500: #{map-get(mat.$orange-palette, 500)};
+  --color-orange-600: #{map-get(mat.$orange-palette, 600)};
+  --color-orange-700: #{map-get(mat.$orange-palette, 700)};
+  --color-orange-800: #{map-get(mat.$orange-palette, 800)};
+  --color-orange-900: #{map-get(mat.$orange-palette, 900)};
+
+  --gray-color-50: #fff7ed;
+  --gray-color-100: #f5f5f4;
+  --gray-color-200: #e7e5e4;
+  --gray-color-300: #d6d3d1;
+  --gray-color-400: #a8a29e;
+  --gray-color-500: #78716c;
+  --gray-color-600: #57534e;
+  --gray-color-700: #44403c;
+  --gray-color-800: #292524;
+  --gray-color-900: #1c1917;
+  --gray-color-950: #0c0a09;
+
+  --text-primary-dark-color: #000000;
+  --text-primary-light-color: #ffffff;
+}
+
 /* Blue Theme */
 .blue-theme {
   @include mat.all-component-colors($app-theme-blue);
+
+  --primary-color-50: var(--color-blue-50);
+  --primary-color-100: var(--color-blue-100);
+  --primary-color-200: var(--color-blue-200);
+  --primary-color-300: var(--color-blue-300);
+  --primary-color-400: var(--color-blue-400);
+  --primary-color-500: var(--color-blue-500);
+  --primary-color-600: var(--color-blue-600);
+  --primary-color-700: var(--color-blue-700);
+  --primary-color-800: var(--color-blue-800);
+  --primary-color-900: var(--color-blue-900);
 }
 
 /* Purple Theme */
 .purple-theme {
   @include mat.all-component-colors($app-theme-purple);
+
+  --primary-color-50: var(--color-purple-50);
+  --primary-color-100: var(--color-purple-100);
+  --primary-color-200: var(--color-purple-200);
+  --primary-color-300: var(--color-purple-300);
+  --primary-color-400: var(--color-purple-400);
+  --primary-color-500: var(--color-purple-500);
+  --primary-color-600: var(--color-purple-600);
+  --primary-color-700: var(--color-purple-700);
+  --primary-color-800: var(--color-purple-800);
+  --primary-color-900: var(--color-purple-900);
 }
 
 /* Green Theme */
 .green-theme {
   @include mat.all-component-colors($app-theme-green);
+
+  --primary-color-50: var(--color-green-50);
+  --primary-color-100: var(--color-green-100);
+  --primary-color-200: var(--color-green-200);
+  --primary-color-300: var(--color-green-300);
+  --primary-color-400: var(--color-green-400);
+  --primary-color-500: var(--color-green-500);
+  --primary-color-600: var(--color-green-600);
+  --primary-color-700: var(--color-green-700);
+  --primary-color-800: var(--color-green-800);
+  --primary-color-900: var(--color-green-900);
+
 }
 
 /* Orange Theme */
 .orange-theme {
   @include mat.all-component-colors($app-theme-orange);
+
+  --primary-color-50: var(--color-orange-100);
+  --primary-color-100: var(--color-orange-100);
+  --primary-color-200: var(--color-orange-200);
+  --primary-color-300: var(--color-orange-300);
+  --primary-color-400: var(--color-orange-400);
+  --primary-color-500: var(--color-orange-500);
+  --primary-color-600: var(--color-orange-600);
+  --primary-color-700: var(--color-orange-700);
+  --primary-color-800: var(--color-orange-800);
+  --primary-color-900: var(--color-orange-900);
 }
 
