--- a/projects/common/src/lib/shared/layout/header/header.component.css
+++ b/projects/common/src/lib/shared/layout/header/header.component.css
@@ -1,9 +1,12 @@
 .wrapper {
+  background-color: var(--primary-color-50);
+}
+
+.header-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   gap: 8px;
-  background-color: var(--primary-color-50);
   align-items: center;
 }
 
