--- a/projects/common/src/lib/shared/layout/header/header.component.html
+++ b/projects/common/src/lib/shared/layout/header/header.component.html
@@ -1,9 +1,11 @@
-<header class="wrapper container">
-  <section class="first-section">
-    <p>KNBLOG</p>
-  </section>
-  <section class="second-section">
-    <button mat-button color="primary" type="button">Sign in</button>
-    <button mat-button color="primary" type="button">Sign up</button>
-  </section>
+<header class="wrapper">
+  <div class="container header-container">
+    <section class="first-section">
+      <p>KNBLOG</p>
+    </section>
+    <section class="second-section">
+      <button mat-button color="primary" type="button">Sign in</button>
+      <button mat-button color="primary" type="button">Sign up</button>
+    </section>
+  </div>
 </header>
