Build base structure for authentication

--- a/projects/common/src/lib/shared/components/inputs/input/input.component.html
+++ b/projects/common/src/lib/shared/components/inputs/input/input.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <mat-form-field class="form-field">
-    <mat-label>{{ label() }}</mat-label>
+    <!-- <mat-label>{{ label() }}</mat-label> -->
     <input
       matInput
       [type]="type()"
