--- a/projects/common/src/lib/shared/layout/header/header.component.html
+++ b/projects/common/src/lib/shared/layout/header/header.component.html
@@ -4,8 +4,7 @@
       <p>KNBLOG</p>
     </section>
     <section class="second-section">
-      <button mat-button color="primary" type="button">Sign in</button>
-      <button mat-button color="primary" type="button">Sign up</button>
+      <button (click)="onSignIn()" mat-button color="primary" type="button">Sign in</button>
     </section>
   </div>
 </header>
