Add auth functionality

--- a/projects/common/src/lib/shared/components/authentication/login/login.component.html
+++ b/projects/common/src/lib/shared/components/authentication/login/login.component.html
@@ -1,3 +1,8 @@
-<section>
-  <h1>Login</h1>
-</section>
+<form [formGroup]="loginForm">
+  <knc-input placeholder="abc@gmail.com" formControlName="email"></knc-input>
+  <knc-input
+    placeholder="yourSecretPassword123"
+    formControlName="password"
+  ></knc-input>
+  <button mat-button type="submit">Sign In</button>
+</form>
