Add app dialog layout

--- a/projects/web/src/app/app.component.html
+++ b/projects/web/src/app/app.component.html
@@ -1,5 +1,5 @@
-<knc-layout>
+<knc-app-layout>
   <knc-theme-provider>
     <router-outlet></router-outlet>
   </knc-theme-provider>
-</knc-layout>
+</knc-app-layout>
