--- a/projects/common/src/lib/shared/components/authentication/login/login.component.html
+++ b/projects/common/src/lib/shared/components/authentication/login/login.component.html
@@ -1,8 +1,18 @@
-<form [formGroup]="loginForm">
-  <knc-input placeholder="abc@gmail.com" formControlName="email"></knc-input>
-  <knc-input
-    placeholder="yourSecretPassword123"
-    formControlName="password"
-  ></knc-input>
-  <button mat-button type="submit">Sign In</button>
+<form [formGroup]="loginForm" (submit)="onSubmit()">
+  <knc-dialog-layout>
+    <ng-container slot="header"> Sign In </ng-container>
+    <ng-container slot="body">
+      <knc-input
+        placeholder="abc@gmail.com"
+        formControlName="email"
+      ></knc-input>
+      <knc-input
+        placeholder="yourSecretPassword123"
+        formControlName="password"
+      ></knc-input>
+    </ng-container>
+    <ng-container slot="footer">
+      <button mat-button type="submit">Sign In</button>
+    </ng-container>
+  </knc-dialog-layout>
 </form>
