--- a/projects/common/src/lib/shared/theme/custom-theme.scss
+++ b/projects/common/src/lib/shared/theme/custom-theme.scss
@@ -78,49 +78,49 @@ $app-theme-orange: mat.define-light-theme((color: (primary: $app-primary-orange,
 @include mat.all-component-themes($app-theme-blue);
 
 :root {
-  --blue-color-50: #{map-get(mat.$blue-palette, 50)};
-  --blue-color-100: #{map-get(mat.$blue-palette, 100)};
-  --blue-color-200: #{map-get(mat.$blue-palette, 200)};
-  --blue-color-300: #{map-get(mat.$blue-palette, 300)};
-  --blue-color-400: #{map-get(mat.$blue-palette, 400)};
-  --blue-color-500: #{map-get(mat.$blue-palette, 500)};
-  --blue-color-600: #{map-get(mat.$blue-palette, 600)};
-  --blue-color-700: #{map-get(mat.$blue-palette, 700)};
-  --blue-color-800: #{map-get(mat.$blue-palette, 800)};
-  --blue-color-900: #{map-get(mat.$blue-palette, 900)};
+  --blue-color-50: #{mat.get-theme-color($app-theme-blue, primary, 50)};
+  --blue-color-100: #{mat.get-theme-color($app-theme-blue, primary, 100)};
+  --blue-color-200: #{mat.get-theme-color($app-theme-blue, primary, 200)};
+  --blue-color-300: #{mat.get-theme-color($app-theme-blue, primary, 300)};
+  --blue-color-400: #{mat.get-theme-color($app-theme-blue, primary, 400)};
+  --blue-color-500: #{mat.get-theme-color($app-theme-blue, primary, 500)};
+  --blue-color-600: #{mat.get-theme-color($app-theme-blue, primary, 600)};
+  --blue-color-700: #{mat.get-theme-color($app-theme-blue, primary, 700)};
+  --blue-color-800: #{mat.get-theme-color($app-theme-blue, primary, 800)};
+  --blue-color-900: #{mat.get-theme-color($app-theme-blue, primary, 900)};
 
-  --purple-color-50: #{map-get(mat.$purple-palette, 50)};
-  --purple-color-100: #{map-get(mat.$purple-palette, 100)};
-  --purple-color-200: #{map-get(mat.$purple-palette, 200)};
-  --purple-color-300: #{map-get(mat.$purple-palette, 300)};
-  --purple-color-400: #{map-get(mat.$purple-palette, 400)};
-  --purple-color-500: #{map-get(mat.$purple-palette, 500)};
-  --purple-color-600: #{map-get(mat.$purple-palette, 600)};
-  --purple-color-700: #{map-get(mat.$purple-palette, 700)};
-  --purple-color-800: #{map-get(mat.$purple-palette, 800)};
-  --purple-color-900: #{map-get(mat.$purple-palette, 900)};
+  --purple-color-50: #{mat.get-theme-color($app-theme-purple, primary, 50)};
+  --purple-color-100: #{mat.get-theme-color($app-theme-purple, primary, 100)};
+  --purple-color-200: #{mat.get-theme-color($app-theme-purple, primary, 200)};
+  --purple-color-300: #{mat.get-theme-color($app-theme-purple, primary, 300)};
+  --purple-color-400: #{mat.get-theme-color($app-theme-purple, primary, 400)};
+  --purple-color-500: #{mat.get-theme-color($app-theme-purple, primary, 500)};
+  --purple-color-600: #{mat.get-theme-color($app-theme-purple, primary, 600)};
+  --purple-color-700: #{mat.get-theme-color($app-theme-purple, primary, 700)};
+  --purple-color-800: #{mat.get-theme-color($app-theme-purple, primary, 800)};
+  --purple-color-900: #{mat.get-theme-color($app-theme-purple, primary, 900)};
 
-  --green-color-50: #{map-get(mat.$green-palette, 50)};
-  --green-color-100: #{map-get(mat.$green-palette, 100)};
-  --green-color-200: #{map-get(mat.$green-palette, 200)};
-  --green-color-300: #{map-get(mat.$green-palette, 300)};
-  --green-color-400: #{map-get(mat.$green-palette, 400)};
-  --green-color-500: #{map-get(mat.$green-palette, 500)};
-  --green-color-600: #{map-get(mat.$green-palette, 600)};
-  --green-color-700: #{map-get(mat.$green-palette, 700)};
-  --green-color-800: #{map-get(mat.$green-palette, 800)};
-  --green-color-900: #{map-get(mat.$green-palette, 900)};
+  --green-color-50: #{mat.get-theme-color($app-theme-green, primary, 50)};
+  --green-color-100: #{mat.get-theme-color($app-theme-green, primary, 100)};
+  --green-color-200: #{mat.get-theme-color($app-theme-green, primary, 200)};
+  --green-color-300: #{mat.get-theme-color($app-theme-green, primary, 300)};
+  --green-color-400: #{mat.get-theme-color($app-theme-green, primary, 400)};
+  --green-color-500: #{mat.get-theme-color($app-theme-green, primary, 500)};
+  --green-color-600: #{mat.get-theme-color($app-theme-green, primary, 600)};
+  --green-color-700: #{mat.get-theme-color($app-theme-green, primary, 700)};
+  --green-color-800: #{mat.get-theme-color($app-theme-green, primary, 800)};
+  --green-color-900: #{mat.get-theme-color($app-theme-green, primary, 900)};
 
-  --orange-color-50: #{map-get(mat.$orange-palette, 50)};
-  --orange-color-100: #{map-get(mat.$orange-palette, 100)};
-  --orange-color-200: #{map-get(mat.$orange-palette, 200)};
-  --orange-color-300: #{map-get(mat.$orange-palette, 300)};
-  --orange-color-400: #{map-get(mat.$orange-palette, 400)};
-  --orange-color-500: #{map-get(mat.$orange-palette, 500)};
-  --orange-color-600: #{map-get(mat.$orange-palette, 600)};
-  --orange-color-700: #{map-get(mat.$orange-palette, 700)};
-  --orange-color-800: #{map-get(mat.$orange-palette, 800)};
-  --orange-color-900: #{map-get(mat.$orange-palette, 900)};
+  --orange-color-50: #{mat.get-theme-color($app-theme-orange, primary, 50)};
+  --orange-color-100: #{mat.get-theme-color($app-theme-orange, primary, 100)};
+  --orange-color-200: #{mat.get-theme-color($app-theme-orange, primary, 200)};
+  --orange-color-300: #{mat.get-theme-color($app-theme-orange, primary, 300)};
+  --orange-color-400: #{mat.get-theme-color($app-theme-orange, primary, 400)};
+  --orange-color-500: #{mat.get-theme-color($app-theme-orange, primary, 500)};
+  --orange-color-600: #{mat.get-theme-color($app-theme-orange, primary, 600)};
+  --orange-color-700: #{mat.get-theme-color($app-theme-orange, primary, 700)};
+  --orange-color-800: #{mat.get-theme-color($app-theme-orange, primary, 800)};
+  --orange-color-900: #{mat.get-theme-color($app-theme-orange, primary, 900)};
 
   --error-color: #{map-get(mat.$red-palette, 500)};
 
@@ -144,62 +144,62 @@ $app-theme-orange: mat.define-light-theme((color: (primary: $app-primary-orange,
 .blue-theme {
   @include mat.all-component-colors($app-theme-blue);
 
-  --primary-color-50: var(--color-blue-50);
-  --primary-color-100: var(--color-blue-100);
-  --primary-color-200: var(--color-blue-200);
-  --primary-color-300: var(--color-blue-300);
-  --primary-color-400: var(--color-blue-400);
-  --primary-color-500: var(--color-blue-500);
-  --primary-color-600: var(--color-blue-600);
-  --primary-color-700: var(--color-blue-700);
-  --primary-color-800: var(--color-blue-800);
-  --primary-color-900: var(--color-blue-900);
+  --primary-color-50: var(--blue-color-50);
+  --primary-color-100: var(--blue-color-100);
+  --primary-color-200: var(--blue-color-200);
+  --primary-color-300: var(--blue-color-300);
+  --primary-color-400: var(--blue-color-400);
+  --primary-color-500: var(--blue-color-500);
+  --primary-color-600: var(--blue-color-600);
+  --primary-color-700: var(--blue-color-700);
+  --primary-color-800: var(--blue-color-800);
+  --primary-color-900: var(--blue-color-900);
 }
 
 /* Purple Theme */
 .purple-theme {
   @include mat.all-component-colors($app-theme-purple);
 
-  --primary-color-50: var(--color-purple-50);
-  --primary-color-100: var(--color-purple-100);
-  --primary-color-200: var(--color-purple-200);
-  --primary-color-300: var(--color-purple-300);
-  --primary-color-400: var(--color-purple-400);
-  --primary-color-500: var(--color-purple-500);
-  --primary-color-600: var(--color-purple-600);
-  --primary-color-700: var(--color-purple-700);
-  --primary-color-800: var(--color-purple-800);
-  --primary-color-900: var(--color-purple-900);
+  --primary-color-50: var(--purple-color-50);
+  --primary-color-100: var(--purple-color-100);
+  --primary-color-200: var(--purple-color-200);
+  --primary-color-300: var(--purple-color-300);
+  --primary-color-400: var(--purple-color-400);
+  --primary-color-500: var(--purple-color-500);
+  --primary-color-600: var(--purple-color-600);
+  --primary-color-700: var(--purple-color-700);
+  --primary-color-800: var(--purple-color-800);
+  --primary-color-900: var(--purple-color-900);
 }
 
 /* Green Theme */
 .green-theme {
   @include mat.all-component-colors($app-theme-green);
 
-  --primary-color-50: var(--color-green-50);
-  --primary-color-100: var(--color-green-100);
-  --primary-color-200: var(--color-green-200);
-  --primary-color-300: var(--color-green-300);
-  --primary-color-400: var(--color-green-400);
-  --primary-color-500: var(--color-green-500);
-  --primary-color-600: var(--color-green-600);
-  --primary-color-700: var(--color-green-700);
-  --primary-color-800: var(--color-green-800);
-  --primary-color-900: var(--color-green-900);
+  --primary-color-50: var(--green-color-50);
+  --primary-color-100: var(--green-color-100);
+  --primary-color-200: var(--green-color-200);
+  --primary-color-300: var(--green-color-300);
+  --primary-color-400: var(--green-color-400);
+  --primary-color-500: var(--green-color-500);
+  --primary-color-600: var(--green-color-600);
+  --primary-color-700: var(--green-color-700);
+  --primary-color-800: var(--green-color-800);
+  --primary-color-900: var(--green-color-900);
 }
 
 /* Orange Theme */
 .orange-theme {
   @include mat.all-component-colors($app-theme-orange);
 
-  --primary-color-50: var(--color-orange-100);
-  --primary-color-100: var(--color-orange-100);
-  --primary-color-200: var(--color-orange-200);
-  --primary-color-300: var(--color-orange-300);
-  --primary-color-400: var(--color-orange-400);
-  --primary-color-500: var(--color-orange-500);
-  --primary-color-600: var(--color-orange-600);
-  --primary-color-700: var(--color-orange-700);
-  --primary-color-800: var(--color-orange-800);
-  --primary-color-900: var(--color-orange-900);
+  --primary-color-50: var(--orange-color-100);
+  --primary-color-100: var(--orange-color-100);
+  --primary-color-200: var(--orange-color-200);
+  --primary-color-300: var(--orange-color-300);
+  --primary-color-400: var(--orange-color-400);
+  --primary-color-500: var(--orange-color-500);
+  --primary-color-600: var(--orange-color-600);
+  --primary-color-700: var(--orange-color-700);
+  --primary-color-800: var(--orange-color-800);
+  --primary-color-900: var(--orange-color-900);
 }
