--- a/projects/common/src/lib/shared/components/authentication/login/login.component.html
+++ b/projects/common/src/lib/shared/components/authentication/login/login.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="loginForm" (submit)="onSubmit()">
   <knc-dialog-layout>
     <ng-container slot="header">
-      <h2 class="login-header">Sign In</h2>
+      <h2 class="login-header">Sign in</h2>
     </ng-container>
     <ng-container slot="body">
       <section class="content">
@@ -20,7 +20,28 @@
       </section>
     </ng-container>
     <ng-container slot="footer">
-      <button color="primary" mat-raised-button class="submit-button" mat-button type="submit">Sign In</button>
+      <section class="footer-wrapper">
+        <button
+          color="primary"
+          mat-raised-button
+          class="submit-button"
+          mat-button
+          type="submit"
+        >
+          Sign In
+        </button>
+        <div class="footer-divider">
+          <mat-divider class="footer-divider-item"/>
+          <p>OR</p>
+          <mat-divider class="footer-divider-item"/>
+        </div>
+        <asl-google-signin-button
+          type="standard"
+          text="signin_with"
+          size="large"
+          [width]='400'
+        />
+      </section>
     </ng-container>
   </knc-dialog-layout>
 </form>
