Add password component

--- a/projects/common/src/lib/shared/components/authentication/authentication.component.html
+++ b/projects/common/src/lib/shared/components/authentication/authentication.component.html
@@ -1,5 +1,5 @@
-@if (dialogData.state === "signIn") {
-  <knc-login></knc-login>
+@if (authState().state === "signIn") {
+  <knc-login (signup)="onSignup()"/>
 } @else {
-  <knc-register></knc-register>
+  <knc-register (signIn)="onSignIn()"/>
 }
