--- a/projects/common/src/lib/shared/components/authentication/login/login.component.scss
+++ b/projects/common/src/lib/shared/components/authentication/login/login.component.scss
@@ -18,7 +18,7 @@
 .footer-wrapper {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 20px;
   justify-content: center;
 }
 
@@ -31,6 +31,15 @@
 
 .footer-divider-item {
   flex: 1
+}
+
+.footer-sign-up {
+  text-align: center;
+}
+
+.sign-up-text {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .or-text {
