Improve toggle excution state util

--- a/projects/common/src/lib/shared/components/authentication/login/login.component.html
+++ b/projects/common/src/lib/shared/components/authentication/login/login.component.html
@@ -23,6 +23,7 @@
       <section class="footer-wrapper">
         <button
           color="primary"
+          [kncLoading]="isLoading()"
           mat-raised-button
           class="submit-button"
           mat-button
