Improve password style

--- a/projects/common/src/lib/shared/components/inputs/password/password.component.html
+++ b/projects/common/src/lib/shared/components/inputs/password/password.component.html
@@ -12,6 +12,7 @@
 		(click)="togglePassword()"
     [title]="isShowPassword() ? 'Hide password': 'Show password'"
     mat-icon-button
+    class="toggle-password"
 		matSuffix
 	>
 		@if (isShowPassword()) {
