Add alert component

--- a/projects/common/src/lib/shared/components/authentication/login/login.component.scss
+++ b/projects/common/src/lib/shared/components/authentication/login/login.component.scss
@@ -1,4 +1,5 @@
 @use "variables.scss" as *;
+@use "variables.scss" as *;
 
 .login-header {
   text-align: center;
@@ -45,3 +46,4 @@
 .or-text {
   text-align: center;
 }
+
