--- a/projects/common/src/lib/shared/components/authentication/login/login.component.html
+++ b/projects/common/src/lib/shared/components/authentication/login/login.component.html
@@ -6,7 +6,7 @@
     <ng-container slot="body">
       <section>
         @if ( authenticationError() ) {
-          <p>{{ authenticationError() }}</p>
+          <knc-alert type="error" [text]="authenticationError()"/>
         }
       </section>
       <section class="content">
