Update error color

--- a/projects/common/src/lib/shared/components/label/label.component.scss
+++ b/projects/common/src/lib/shared/components/label/label.component.scss
@@ -12,9 +12,9 @@
 }
 
 .required-marker {
-  color: var(--error-color);
+  color: var(--error-color-500);
 }
 
 .is-error {
-  color: var(--error-color);
+  color: var(--error-color-500);
 }
