--- a/projects/common/src/lib/shared/components/inputs/input/input.component.html
+++ b/projects/common/src/lib/shared/components/inputs/input/input.component.html
@@ -1,9 +1,9 @@
 <div class="wrapper">
   <mat-form-field class="form-field">
-    <!-- <mat-label>{{ label() }}</mat-label> -->
     <input
       matInput
       [type]="type()"
+      [name]="name()"
       [formControl]="formControl"
       [placeholder]="placeholder()"
       [autocomplete]="autocomplete()"
