--- a/projects/common/src/lib/shared/components/inputs/password/password.component.html
+++ b/projects/common/src/lib/shared/components/inputs/password/password.component.html
@@ -5,6 +5,7 @@
 		[formControl]="formControl"
 		[placeholder]="placeholder()"
 		[autocomplete]="autocomplete()"
+    [name]="name()"
 	/>
 
 	<button
