Implement user service and related logic

--- a/projects/common/src/lib/shared/components/authentication/register/register.component.html
+++ b/projects/common/src/lib/shared/components/authentication/register/register.component.html
@@ -21,7 +21,7 @@
         </knc-label>
         <knc-label label="Confirm Password" [isRequired]="true">
           <knc-password name="confirm-password" placeholder="yourSecretPassword123"
-            formControlName="password"></knc-password>
+            formControlName="confirmPassword"></knc-password>
         </knc-label>
       </section>
     </ng-container>
