Build snackbar service

--- a/projects/common/src/lib/shared/components/alert/alert.component.html
+++ b/projects/common/src/lib/shared/components/alert/alert.component.html
@@ -3,6 +3,7 @@
   [class.error]="type() === 'error'"
   [class.warning]="type() === 'warning'"
   [class.info]="type() === 'info'"
+  [class.success]="type() === 'success'"
 >
   @switch (type()) {
     @case ("error") {
@@ -11,6 +12,8 @@
       <mat-icon>info</mat-icon>
     }@case ("warning") {
       <mat-icon>warning</mat-icon>
+    }@case ("success") {
+      <mat-icon>check_circle</mat-icon>
     }@default {
       <mat-icon>error_outline</mat-icon>
     }
