--- a/projects/common/src/lib/shared/components/alert/alert.component.scss
+++ b/projects/common/src/lib/shared/components/alert/alert.component.scss
@@ -12,8 +12,12 @@
   gap: 12px;
   color: var(--text-color);
   background-color: var(--background-color);
-  border: 2px solid var(--text-color);
+  border: 1.5px solid var(--text-color);
   border-radius: 4px;
+}
+
+.is-called-from-snackbar {
+  border: none;
 }
 
 .error {
