--- a/projects/common/src/lib/shared/components/authentication/register/register.component.html
+++ b/projects/common/src/lib/shared/components/authentication/register/register.component.html
@@ -39,7 +39,7 @@
         <asl-google-signin-button type="standard" text="signup_with" size="large" [width]="400" />
         <p class="footer-sign-up">
           Already have an account?
-          <b class="sign-up-text" role="button" (click)="onNavigateToSignIn()">Sign In</b>
+          <b class="sign-up-text" role="button" (click)="onNavigateToSignIn()">Sign in</b>
         </p>
       </section>
     </ng-container>
