--- a/projects/common/src/lib/shared/components/authentication/register/register.component.html
+++ b/projects/common/src/lib/shared/components/authentication/register/register.component.html
@@ -36,7 +36,7 @@
           <p>or</p>
           <mat-divider class="footer-divider-item" />
         </div>
-        <knc-resized-google-button/>
+        <knc-resized-google-button text="signup_with"/>
         <p class="footer-sign-up">
           Already have an account?
           <b class="sign-up-text" role="button" (click)="onNavigateToSignIn()">Sign in</b>
