--- a/projects/common/src/lib/shared/components/resized-google-button/resized-google-button.component.html
+++ b/projects/common/src/lib/shared/components/resized-google-button/resized-google-button.component.html
@@ -1,1 +1,1 @@
-<asl-google-signin-button type="standard" text="signin_with" size="large" [width]="width()" />
+<asl-google-signin-button [type]="type()" [text]="text()" size="large" [width]="width()" />
