--- a/projects/common/src/lib/shared/layouts/app-layout/header/header.component.html
+++ b/projects/common/src/lib/shared/layouts/app-layout/header/header.component.html
@@ -4,7 +4,8 @@
       <p>KNBLOG</p>
     </section>
     <section class="second-section">
-      @if (isAuthorized()) {
+      @if (isAuthorized() && currentUser() != null) {
+        <knc-avatar [user]="currentUser() ?? null"></knc-avatar>
         <button (click)="onSignOut()" mat-button color="primary" type="button">Sign out</button>
       }@else {
         <button (click)="onSignIn()" mat-button color="primary" type="button">Sign in</button>
