--- a/projects/common/src/lib/shared/components/avatar/avatar.component.scss
+++ b/projects/common/src/lib/shared/components/avatar/avatar.component.scss
@@ -32,3 +32,13 @@
   height: 100%;
   border-radius: 50%;
 }
+
+.name-picture {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  color: white;
+}
